--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^5.2.6",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@storybook/builder-webpack5": "^7.6.10",
     "@storybook/manager-webpack5": "^6.5.16",
